@@ -29,7 +29,6 @@
 #include <stdlib.h>
 #include <string.h>
 #include <errno.h>
-extern int errno;
 #include <fcntl.h>
 #include <sys/types.h>
 #include <sys/stat.h>
