@@ -1,4 +1,6 @@
 Version 1.0.6 (not yet released):
+- Remove the obsolete "extern int errno;" declaration. It does not conform to
+  POSIX and causes trouble. Thanks to Jeremy C. Reed for the patch.
 - Added AC_SYS_LARGEFILE to configure.ac, for large file support. Removed the
   unnecessary AC_C_CONST and AC_HEADER_STDC.
 
